--- a/README.Rmd
+++ b/README.Rmd
@@ -70,6 +70,7 @@ tibble::tribble(
   "Living Situation", "*Enrollment.csv*", 
   "Welfare History", "*Enrollment.csv*", 
   "Program Exit Status", "*Exit.csv*", 
+  "Trafficking", "*Exit.csv*", 
   "Domestic Violence History", "*HealthAndDV.csv*", 
   "Overall Health (General, Dental, and Mental)", "*HealthAndDV.csv*", 
   "Pregnancy Status", "*HealthAndDV.csv*", 
@@ -81,13 +82,6 @@ tibble::tribble(
   knitr::kable()
 
 ```
-
-
-
-
-#### TO DO:
-
-* Not sure where to find data around trafficking  
 
 ### Historical Database
 
