Transferred repo to COHHIO

--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ You can install the development version of `{ryha}` from [GitHub](https://github
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("ketchbrookanalytics/ryha")
+devtools::install_github("COHHIO/ryha")
 ```
 
 ## Running the App
