Reverting to soft link to "Help" page
from "Welcome" page

--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ The goal of `{ryha}` is to provide a web-based application for in-depth, user-fr
 
 This Shiny application is built using the [{golem} framework](https://thinkr-open.github.io/golem/), which means that this app is actually an *R package*.
 
-You can install the development version of `{ryha}` from [GitHub](https://github.com/) with:
+You can install `{ryha}` with:
 
 ``` r
 # install.packages("devtools")
@@ -33,7 +33,7 @@ devtools::install_github("COHHIO/ryha")
 
 ## Running the App
 
-Before launching the app, you must have the following configurations in place for interacting with to the external database:
+Before launching the app, you must have the following configurations set, for the purposes of interacting with the external database:
 
 * Environment Variables (for *reading from* & *writing to* the database):
   * `DB_NAME`
