Place README images into its own folder

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-",
+  fig.path = "man/figures/README/",
   out.width = "100%"
 )
 ```
@@ -102,7 +102,7 @@ The data dictionary for each element across each file can be found [here](https:
 
 The following architecture diagram shows how the app can be used for both uploading (.zip file) HMIS data, and visualizing previously uploaded HMIS data.
 
-![](man/figures/README-architecture-diagram.png)
+![](man/figures/README/architecture-diagram.png)
 
 ## Development Environment
 
@@ -127,7 +127,7 @@ The following architecture diagram shows how the app can be used for both upload
 
 Once you have the requirements installed, have cloned the repo locally and created the `.devcontainer/.env` file, open the repository in VSCode and click **Reopen in Container...**:
 
-![](man/figures/README-reopen-in-container.png)
+![](man/figures/README/reopen-in-container.png)
 
 *NOTE*: Alternatively, you can select **Dev Containers: Reopen in Container** from the Command Palette (`F1`) to perform this action.
 
@@ -138,7 +138,7 @@ To exit the Dev Container, click **Dev Container** (bottom left corner) and sele
 - **Reopen Folder Locally**: This option will close the current Dev Container session and reopen the project folder in your local environment, outside of the containerized setup. It's useful when you want to switch back to your local development environment while keeping the same project open.
 - **Close Remote Connection**: This will close the connection to the Dev Container and stop the container. The current workspace will be closed, and you'll be returned to the main VS Code window without any active workspace or connection.
 
-![](man/figures/README-exit-container.png)
+![](man/figures/README/exit-container.png)
 
 ### Remove Container and Image
 
@@ -151,14 +151,14 @@ While the following steps demonstrate how to do so using Docker Desktop, you are
 1. Go to Containers tab
 1. Locate the container associated with your Dev Container and click the corresponding trash icon to stop and delete it
 
-![](man/figures/README-delete-container.png)
+![](man/figures/README/delete-container.png)
 
 #### Remove Image
 
 1. Go to Images tab
 1. Locate the images associated with you Dev Container and click the corresponding trash icons to remove them from your local Docker repository
 
-![](man/figures/README-delete-images.png)
+![](man/figures/README/delete-images.png)
 
 Following these steps ensures that all resources associated with the Dev Container are completely cleaned up from your system.
 
