Complete remove dev container
Added delete volumes section

--- a/README.Rmd
+++ b/README.Rmd
@@ -156,9 +156,18 @@ To exit the Dev Container, click **Dev Container** (bottom left corner) and sele
 
 ### Remove Dev Container
 
-Once you've **exited the Dev Container**, you may want to remove the container and its associated images to free up system resources.
+*NOTE*: If you work on the project on a regular basis, it's not *necessary* to remove the Dev Container after you exit it.
 
-While the following steps demonstrate how to do so using Docker Desktop, you are free to accomplish the same tasks using Docker's command-line interface.
+To remove the Dev Container:
+
+1. [Exit the Dev Container](#exit-dev-container)
+1. Remove the container
+1. Remove associated images
+1. Remove associated volumes
+
+**Warning**: Removing the volumes will delete the development database and any data you've uploaded, requiring you to repopulate the database after rebuilding. If you choose to delete **only** the container and its associated images (i.e. you don't delete the volumes), the development database will be available when you rebuild the Dev Container.
+
+The following steps demonstrate how to remove the container, images and volumes using Docker Desktop. You can also use Docker's command-line interface to perform the same tasks.
 
 #### Remove Container
 
@@ -173,6 +182,15 @@ While the following steps demonstrate how to do so using Docker Desktop, you are
 1. Locate the images associated with your Dev Container and click the corresponding trash icons to remove them from your local Docker repository
 
 ![](man/figures/README/delete-images.png)
+
+#### Remove Volumes
+
+1. Go to Volumes tab
+1. Search for `ryha`
+1. Select the associated volumes
+1. Click **Delete**
+
+![](man/figures/README/delete-volumes.png)
 
 ### Container Details
 
