Address PR comment

--- a/README.Rmd
+++ b/README.Rmd
@@ -119,7 +119,7 @@ The following architecture diagram shows how the app can be used for both upload
 
 ### Requirements
 
-- [Docker](https://docs.docker.com/engine/install/). While not mandatory, we recommend installing it via [Docker Desktop](https://docs.docker.com/desktop/install/windows-install/).
+- [Docker](https://docs.docker.com/engine/install/). We recommend installing it via [Docker Desktop](https://docs.docker.com/desktop/install/windows-install/).
 - [VS Code](https://code.visualstudio.com/)
 - VS Code's [Dev Container Extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.remote-containers)
 
